tests/compile-fail/integration__integration__timeline_arg0__wrong_lang.snap
---
source: tests/integration/timeline_arg0.rs
expression: stderr
---
error: unknown ECL Timeline instruction or function 'eclOnly'
  ┌─ <input>:4:5
  │
4 │     eclOnly(0, 3, 3);
  │     ^^^^^^^ not found in this scope
  │
  = there is a 'eclOnly' defined in ECL

error: unknown ECL instruction or function 'timelineOnly'
  ┌─ <input>:8:5
  │
8 │     timelineOnly(0, 3, 3);
  │     ^^^^^^^^^^^^ not found in this scope
  │
  = there is a 'timelineOnly' defined in ECL Timeline


